--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,12 +4,12 @@ on:
 jobs:
   build:
     runs-on:ubuntu-latest
-    steps:
+    steps：
       -uses:actions/checkout@master
       -name:Building Docker Image
        uses:elgohr/Publish-Docker-Github-Action@master
-       with:
+       with：
         #下发的name格式为：Docker Hub ID/自定义镜像名称
-        name:youngsamedeg/samena
+        name：youngsamedeg/samena
         username:'${{secrets.DOCKER_USERNAME}}'
         password:'${{secrets.DOCKER_USERNAME}}'
